@@ -1,3 +1,8 @@
+Thu Jan 29 10:41:52 2015  gogotanaka  <mail@tanakakazuki.com>
+
+	* math.c (Get_Double): direct casting from Fixnum to double.
+	  [Feature #10785]
+
 Thu Jan 29 02:34:27 2015  Aaron Patterson <aaron@tenderlovemaking.com>
 
 	* ext/psych/lib/psych/visitors/to_ruby.rb: fix parsing hashes with
